[package]
name = "gcli"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
paris = { version = "1.5", features = ["timestamps", "macros", "no_logger"] }
regex = "1"
inquire = "0.6"
itertools = "0.12"